--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="cuota"></div>
         </div>
         <section class="sec-2">
-            <img src="./img/carro1.png" alt="carro">
+            <img src="./img/carro1.jpg" alt="carro">
         </section>
     </section>
 
