--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <section class="sec-2">
             <img src="./img/carro1.jpg" alt="carro">
         </section>
+        
+        <iframe style="width:320px;height:260px;border-radius:10px;box-shadow:2px 4px 4px rgb(0 0 0 / 25%);display:flex;justify-content:center;border:1px solid #bcbcbc" src="https://dolarhoy.com/i/cotizaciones/dolar-blue" frameborder="0"></iframe>
+
     </section>
 
     <!-- <div class="container">
