--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <section class="principal">
         <div class="secundario">
-            <h2>"Esta Pre entrega cierra en..."</h2>
+            <h2>"La promocion para tu seguro con descuento termina en..."</h2>
             <div id="contador"></div>
-            <div class="btn-contenedor"><button class="btn">Corregir!</button></div>
+            <div class="btn-contenedor"><button class="btn">Contratar!</button></div>
         </div>
         
     </section>
