--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Practica de JS</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./index.js"></script>
+    <script src="./repasoDeClases.js"></script> <!-- Script para repaso y agregar CoderHouse-->
 </head>
 <body>
 
@@ -17,7 +18,7 @@
         <div class="secundario">
             <h2>"La promocion para tu seguro con descuento termina en..."</h2>
             <div id="contador"></div>
-            <div class="btn-contenedor"><button class="btn">Contratar!</button></div>
+            <div class="btn-contenedor"><a href="#tit"><button class="btn">Contratar!</button></div></a>
         </div>
         
     </section>
@@ -47,7 +48,7 @@
     </section>
 
     <section class="sec-2">
-        <div class="container">
+        <div class="container2">
             <img src="./img/carro1.jpg" alt="carro">
             <iframe src="https://dolarhoy.com/i/cotizaciones/dolar-blue" frameborder="0"></iframe>
         </div>
