--- a/index.html
+++ b/index.html
@@ -1,58 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica de JS</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./index.js"></script>
-    <script src="./repasoDeClases.js"></script> <!-- Script para repaso y agregar CoderHouse-->
+    <title>Curso JS - Coder House - Comi: 49830</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <header>
-        <h1>Practica JS - JavaScript Seguros</h1>
-    </header>
-
-    <section class="principal">
-        <div class="secundario">
-            <h2>"La promocion para tu seguro con descuento termina en..."</h2>
-            <div id="contador"></div>
-            <div class="btn-contenedor"><a href="#tit"><button class="btn">Contratar!</button></div></a>
-        </div>
-        
-    </section>
-
-    <section class="sec-1">
-        <div class="container">
-            <h3 id="tit">Cotiza tu Cuota!</h3>
-            <form action="">
-                <div>
-                    <label for="genero">GENERO</label>
-                    <select name="" id="genero">
-                        <option value="hombre" >Hombre</option>
-                        <option value="mujer" >Mujer</option>
-                    </select> 
-                </div>           
-                <div>
-                    <label for="edad">EDAD</label>
-                    <input type="number" name="" id="edad" required>
-                </div>
-
-                <div class="div-button">
-                    <button type="button" onclick="generaCuota()">VER CUOTA</button> 
-                </div>
-            </form>  
-            <div id="cuota"></div>
-        </div>
-    </section>
-
-    <section class="sec-2">
-        <div class="container2">
-            <img src="./img/carro1.jpg" alt="carro">
-            <iframe src="https://dolarhoy.com/i/cotizaciones/dolar-blue" frameborder="0"></iframe>
-        </div>
-    </section>
-
+    <a href="./main.js"><button>Pre Entrega 1 - Ortiz Marcelo</button></a>
+    <script src="./main.js"></script>
 </body>
 </html>
