--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <h2>Listado de Turnos</h2>
     <ul id="listaTurnos"></ul>
     <script src="./main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
